[metadata]
name = geoscilabs
author = OCESE
author_email = phaustin@eoas.ub.ca
description = e350 libraries
url = https://github.com/phaustin/e211_lib
project_urls =
    Bug Tracker = https://github.com/phaustin/e211_lib/issues
keywords='eoas ubc ocese',
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license_files = LICENSE

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
python_requires = >=3.8
setup_requires =
    setuptools_scm
package_dir =
    = geoscilabs
[options.packages.find]
where = geoscilabs

[bdist_wheel]
universal = 1


